# native-ai-apk

./: .gitignore  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  engine.cpp  engine.h  jni_bridge.cpp
app/src/main/cpp/ai/: ai_engine.cpp  ai_engine.h  nnapi_runner.cpp  tflite_runner.cpp
app/src/main/java/com/native/ultimate/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
